[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nnfabrik"
version = "0.2.1"
description = "A generalized model fitting pipeline"
dependencies = [
    "ax-platform",
    "datajoint",
    "GitPython",
    "numpy",
    "pandas",
    "Pillow",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "typing"
]

[[project.authors]]
name = "Sinz Lab"
email = "software@sinzlab.net"

[project.urls]
GitHub = "https://github.com/sinzlab/nnfabrik"

[tool.black]
line-length = 120
